# jarvis

./: .gitignore  AGENTS.md  deep-research-report.md  pyrightconfig.json
apps/ios/: AGENTS.md
apps/ios/JarvisIOS/: AGENTS.md
apps/ios/JarvisIOS.xcodeproj/: project.pbxproj
apps/ios/JarvisIOS/App/: JarvisIOSApp.swift
apps/ios/JarvisIOS/Support/: AppEnvironment.swift
apps/ios/JarvisIOS/UI/: HUDComponents.swift  JarvisTheme.swift
apps/ios/JarvisIOSTests/: VoiceCaptureViewModelTests.swift
apps/ios/JarvisIOSUITests/: JarvisIOSUITests.swift
apps/ios/scripts/: AGENTS.md  build-simulator.sh  preflight-ios-testing.sh  resolve-simulator-device.sh  test-simulator.sh  test-ui-interactions.sh
docs/: jarvis-v1-foundation.md
docs/architecture/: repo-structure.md
docs/setup/: AGENTS.md
services/core-api/: .env.template  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml
services/core-api/app/: AGENTS.md  auth.py  config.py  dependencies.py  errors.py  interactions.py  main.py  schemas.py  telemetry.py
services/core-api/app/routes/: health.py  voice.py
services/core-api/scripts/: check-python-live.sh  check-python.sh
services/core-api/tests/: test_voice_interactions.py  test_voice_transcriptions.py  test_voice_transcriptions_whisper_cpp.py
services/device-gateway/: AGENTS.md
services/device-gateway/src/: AGENTS.md
services/device-gateway/src/providers/: AGENTS.md
services/voice/: AGENTS.md  pyproject.toml
services/voice/src/: AGENTS.md
services/voice/src/jarvis_voice/: __init__.py  adapters.py  exceptions.py  models.py  normalization.py  responses.py  service.py  tts.py
services/voice/tests/: test_adapters.py  test_normalization.py  test_service.py  test_tts.py
(+9 files in other folders)
